<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".editUser">

    <EditText
        android:id="@+id/c_nom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/c_nom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/c_prenom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/c_prenom"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/c_phone"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/c_telephone"
        android:inputType="phone" />

    <Button
        android:id="@+id/b_valid"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/b_valider" />

    <Button
        android:id="@+id/b_cancel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:onClick="onClick"
        android:text="@string/b_annuler" />
</LinearLayout>